Small fixes in parts 02 and 03.

--- a/docs/programmers/tutorials/workflows/part02.tex
+++ b/docs/programmers/tutorials/workflows/part02.tex
@@ -754,7 +754,7 @@ class AScript(SessionBasedScript):
 
     \+ \footnotesize
     {\em (You can download the code for \texttt{GrayscaleApp} and the ``butterfly'' image file from
-    \href{https://raw.githubusercontent.com/uzh/gc3pie/master/docs/programmers/tutorials/workflows/}{this
+    \href{https://github.com/uzh/gc3pie/tree/master/docs/programmers/tutorials/workflows/downloads}{this
       URL}.)}
   \end{exercise*}
 
