--- a/docs/programmers/tutorials/workflows/part03.tex
+++ b/docs/programmers/tutorials/workflows/part03.tex
@@ -61,7 +61,7 @@
   \\
   and \alert<1>{runs all the jobs in it until completion.}
 
-  \+ Run jobs in session \texttt{logo},
+  \+ Run jobs in session \texttt{S},
   polling for updates every 5 seconds:
 \begin{semiverbatim}\small
     \$ ./warholize.py bfly.jpg -{}-session S -{}-watch 5
