Update slide footer with course date.

--- a/docs/programmers/tutorials/workflows/part06.tex
+++ b/docs/programmers/tutorials/workflows/part06.tex
@@ -17,7 +17,7 @@
   \\[1ex]
   University of Zurich
 }
-\date{January~23--27, 2017}
+\date{Aug.~28 -- Sep.~1, 2017}
 
 \begin{document}
 
@@ -631,7 +631,7 @@ def after_main_loop(self):
 \begin{semiverbatim}
   \$ Rscript simAsset.R 50 0.04 0.1 0.27 10 4
 \end{semiverbatim}
-  
+
   \+ Each run of \texttt{simAsset.R} produces two output files:
   \begin{description}
   \item[results.csv] table of generated data: each column is a simulation path, each row is a time step;
