--- a/docs/programmers/tutorials/workflows/part08.tex
+++ b/docs/programmers/tutorials/workflows/part08.tex
@@ -18,7 +18,7 @@
   \\[1ex]
   University of Zurich
 }
-\date{January~23--27, 2017}
+\date{Aug.~28 -- Sep.~1, 2017}
 
 
 \begin{document}
@@ -274,7 +274,7 @@ class Pipeline(StagedTaskCollection):
     \begin{column}{0.4\textwidth}
       \raggedleft
 
-      \+\+\+\+\+ 
+      \+\+\+\+\+
       To abort the sequence, return an integer (termination
       status) or a pair \emph{(signal, exit code)}, instead of a
       \texttt{Task} instance.
