--- a/docs/programmers/tutorials/workflows/recap.tex
+++ b/docs/programmers/tutorials/workflows/recap.tex
@@ -17,7 +17,7 @@
   \\[1ex]
   University of Zurich
 }
-\date{January~23--27, 2017}
+\date{Aug.~28 -- Sep.~1, 2017}
 
 \begin{document}
 
@@ -115,7 +115,7 @@
   All VMs to be deleted Monday morning. \\
   So, \textbf{copy all data you want to save} today!
 
-  \+ 
+  \+
   Your account will be removed \\
   from the \texttt{training} project on Science Cloud. \\
   (Any other project membership stays.)
