part 06: small corrections to the statement of ex 6.a

--- a/docs/programmers/tutorials/workflows/part06.tex
+++ b/docs/programmers/tutorials/workflows/part06.tex
@@ -336,14 +336,11 @@ False
 
     In the \texttt{colorize.py} script from Exercise 4.A, modify the
     \texttt{ColorizeApp} application to move the output picture file
-    into directory \texttt{/home/ubuntu/pictures}.  You might need to
-    store the output file name to have it available when the
-    application has terminated running.
+    into directory \texttt{/home/ubuntu/pictures}.
 
-    \+
-    (You might want to check out
-    \url{http://stackoverflow.com/a/8858026/459543} if you're unsure
-    how to move/rename a file with Python.)
+    \+ {\small (You might want to check out
+      \url{http://stackoverflow.com/a/8858026/459543} if you're unsure
+      how to move/rename a file with Python.)}
   \end{exercise*}
 \end{frame}
 
