part 08: write complete `blastpgp` invocation.
It's different from `blastp` in that it does not accept long option
names (only single letter ones, i.e. `-e` and not `-evalue`)

--- a/docs/programmers/tutorials/workflows/part08.tex
+++ b/docs/programmers/tutorials/workflows/part08.tex
@@ -303,7 +303,7 @@ class Pipeline(StagedTaskCollection):
 \begin{sh}
   cat p1.faa p2.faa p3.faa > db.faa
   formatdb -i db.faa
-  blastpgp -i q.faa -d db.faa -e ...
+  blastpgp -i q.faa -d db.faa -e 1 -m 5
 \end{sh}
 
   \+ The \texttt{formatdb} step produces output files
