part 09: Fix typo in class name.

--- a/docs/programmers/tutorials/workflows/part09.tex
+++ b/docs/programmers/tutorials/workflows/part09.tex
@@ -57,7 +57,7 @@ class MyTasks~\HL{(ParallelTaskCollection)}~:
 from gc3libs.workflow \
   import ParallelTaskCollection
 
-class MyTasks(ParalelTaskCollection):
+class MyTasks(ParallelTaskCollection):
   # ...
   def __init__(self, ...):
     app1 = AnApp(...)
