--- a/docs/programmers/tutorials/workflows/part11.tex
+++ b/docs/programmers/tutorials/workflows/part11.tex
@@ -121,9 +121,9 @@ class HotpoApplication(Application):
       self,
       arguments = (['/usr/bin/expr'] +
         # run `expr n / 2` if n even
-        [n, '/', n] if n % 2 == 0
+        ([n, '/', n] if n % 2 == 0
         # `expr 1 + 3 * n` if n odd
-        else [1, '+', 3, '*', n]),
+        else [1, '+', 3, '*', n])),
       stdout = "stdout.txt",
       # ...
     )
